--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
           <form class="modal-form">
             <div>
               <label for="name">Name</label>
-              <input type="text" id="name" placeholder="Enter Name" />
+              <input type="text" id="name" class="form-input" placeholder="Enter Name" />
             </div>
             <div>
               <label for="email">Email</label>
-              <input type="email" id="email" placeholder="Enter Email" />
+              <input type="email" id="email" class="form-input" placeholder="Enter Email" />
             </div>
             <div>
               <label for="password">Password</label>
               <input
                 type="password"
-                id="password"
+                id="password" class="form-input"
                 placeholder="Enter Password"
               />
             </div>
@@ -110,7 +110,7 @@
               <label for="password2">Confirm Password</label>
               <input
                 type="password"
-                id="Password2"
+                id="Password2" class="form-input"
                 placeholder="Confirm Password"
               />
             </div>
